# ostadsgo.github.io

./: LICENSE  README.md  about.html  code_block.py  index.html  index2.html  main.py  make.py  post_001.html  pyproject.toml  script.js  sgo.py  style.css  style2.css  test.html  test.md
base/: base.html
components/: intro.html  recent_posts.html
includes/: nav.html  page_nav.html  post_nav.html
main/: blog.html  index.html
markdown/: post_001.md
pages/: about.html  blog.html  blog2.html  index.html  index2.html  post_001.html  post_002.html  post_003.html  post_004.html  post_005.html  projects.html  test.html
posts/: first_serious_app.html  post_001.html  post_001.md  post_002.md  post_003.md  post_004.md  post_005.md  test.md
static/css/: style.css
static/js/: script.js
templates/: about.html  base.html  blog.html  footer.html  index.html  intro.html  nav.html  post.html  post_article.html  post_detail.html  post_header.html  post_list.html  post_part.html  post_summary.html  recent_posts.html
