[tool.poetry]
name = "ostadsgo-github-io"
version = "0.1.0"
description = ""
authors = ["Saeed Gholami <saeed.ghollami@gmail.com>"]
readme = "README.md"
packages = [{include = "ostadsgo"}]

[tool.poetry.dependencies]
python = "^3.12"
markdown = "^3.7"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
